--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "express-bunyan-logger": "1.3.3"
+    "express-bunyan-logger": "1.3.3",
+    "sequelize": "^4.0.0"
   }
 }
