--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.19.0",
     "express": "4.17.1",
     "express-bunyan-logger": "1.3.3",
+    "mysql2": "2.2.5",
     "sequelize": "^4.0.0"
   }
 }
