--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/umar-muneer/conrad-express-tutorial#readme",
   "dependencies": {
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "express-bunyan-logger": "1.3.3",
     "mysql2": "2.2.5",
